--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ jmespath==0.9.4
 joblib==0.13.2
 kiwisolver==1.1.0
 lazy-object-proxy==1.3.1
-nltk==3.4.3
+nltk>=3.4.5
 python-telegram-bot==12.0.0
 scikit-learn==0.21.2
 scipy==1.3.0
@@ -20,7 +20,7 @@ six==1.12.0
 sklearn==0.0
 soupsieve==1.9.3
 spacy==2.1.8
-SQLAlchemy==1.2.19
+SQLAlchemy>=1.3.0
 sqlparse==0.3.0
 srsly==0.1.0
 temp==2019.4.13
