--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,25 @@
+alembic==1.0.10
+asn1crypto==0.24.0
+astroid==2.2.5
+beautifulsoup4==4.8.0
+blis==0.2.4
+boto3==1.9.154
+botocore==1.12.154
+bs4==0.0.1
+certifi==2019.3.9
+cffi==1.12.3
+chardet==3.0.4
+ChatterBot==1.0.5
+chatterbot-corpus==1.2.0
+Click==7.0
+colorama==0.4.1
+cryptography==2.7
+cycler==0.10.0
+cymem==2.0.2
+Django==2.2.2
+docutils==0.14
+docx2txt==0.7
+et-xmlfile==1.0.1
 Flask==1.0.3
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.0
@@ -12,15 +34,48 @@ jmespath==0.9.4
 joblib==0.13.2
 kiwisolver==1.1.0
 lazy-object-proxy==1.3.1
-nltk>=3.4.5
+lxml==4.3.3
+Mako==1.0.11
+MarkupSafe==1.1.1
+mathparse==0.1.2
+matplotlib==3.1.1
+mccabe==0.6.1
+murmurhash==1.0.2
+nltk==3.4.3
+numpy==1.16.3
+openpyxl==2.6.2
+pandas==0.24.2
+pathlib==1.0.1
+Pillow==6.0.0
+Pint==0.9
+plac==0.9.6
+preshed==2.0.1
+psycopg2==2.8.3
+public==2019.4.13
+pycparser==2.19
+pylint==2.3.1
+pymongo==3.9.0
+PyMuPDF==1.14.15
+pyparsing==2.4.0
+PyPDF2==1.26.0
+pyTelegramBotAPI==3.6.6
+python-dateutil==2.7.5
+python-docx==0.8.10
+python-editor==1.0.4
 python-telegram-bot==12.0.0
+pytorch-pretrained-bert==0.6.2
+pytz==2019.1
+PyYAML==3.13
+regex==2019.4.14
+requests==2.22.0
+s3transfer==0.2.0
 scikit-learn==0.21.2
 scipy==1.3.0
 six==1.12.0
 sklearn==0.0
 soupsieve==1.9.3
 spacy==2.1.8
-SQLAlchemy>=1.3.0
+SQLAlchemy==1.2.19
 sqlparse==0.3.0
 srsly==0.1.0
 temp==2019.4.13
