--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ colorama==0.4.1
 cryptography==2.7
 cycler==0.10.0
 cymem==2.0.2
-Django==2.2.2
+django>=2.2.4
 docutils==0.14
 docx2txt==0.7
 et-xmlfile==1.0.1
@@ -41,7 +41,7 @@ mathparse==0.1.2
 matplotlib==3.1.1
 mccabe==0.6.1
 murmurhash==1.0.2
-nltk==3.4.3
+nltk>=3.4.5
 numpy==1.16.3
 openpyxl==2.6.2
 pandas==0.24.2
@@ -65,7 +65,7 @@ python-editor==1.0.4
 python-telegram-bot==12.0.0
 pytorch-pretrained-bert==0.6.2
 pytz==2019.1
-PyYAML==3.13
+pyyaml>=4.2b1
 regex==2019.4.14
 requests==2.22.0
 s3transfer==0.2.0
@@ -75,7 +75,7 @@ six==1.12.0
 sklearn==0.0
 soupsieve==1.9.3
 spacy==2.1.8
-SQLAlchemy==1.2.19
+SQLAlchemy>=1.3.0
 sqlparse==0.3.0
 srsly==0.1.0
 temp==2019.4.13
