--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-
-nltk>=3.4.5
-numpy==1.16.3
-pandas==0.24.2
-scikit-learn==0.21.2
-scipy==1.3.0
-sklearn==0.0
-soupsieve==1.9.3
-spacy==2.1.8
-SQLAlchemy>=1.3.0
-Werkzeug==0.15.4
-WTForms==2.2.1
+alembic>=1.0.10
+Flask>=1.0.3
+Flask-Migrate>=2.5.2
+Flask-SQLAlchemy>=2.4.0
+Flask-WTF>=0.14.2
+Jinja2>=2.10.1
+nltk>=3.4.3
+numpy>=1.16.3
+pyTelegramBotAPI>=3.6.6
+requests>=2.22.0
+scikit-learn>=0.21.2
+scipy>=1.3.0
+sklearn>=0.0
+SQLAlchemy>=1.2.19
+sqlparse>=0.3.0
+WTForms>=2.2.1
